--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Cos'è il cinema?</h2>
+							<p>Il cinema è l'arte e la tecnica di registrare e proiettare immagini in movimento per raccontare storie o trasmettere emozioni. Si basa sull'illusione ottica di sequenze di fotogrammi proiettati rapidamente, creando l'effetto di un flusso continuo. È considerato la settima arte, unendo elementi visivi, sonori e narrativi in film proiettati su schermi.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -48,8 +48,8 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Cosa trasmette?</h2>
+							<p>Il cinema trasmette emozioni universali come amore, paura e gioia, storie di conflitto umano risolto con catarsi, e visioni critiche della società attraverso immagini in movimento che evocano evasione e riflessione profonda.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -62,8 +62,8 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Perchè è importante?</h2>
+							<p>l cinema è importante perché riflette e plasma la cultura umana, offrendo specchio alle esperienze collettive e individuali.Stimola empatia e comprensione attraverso storie universali che trascendono confini linguistici e geografici.Educa, intrattiene e ispira cambiamenti sociali, preservando la memoria storica e innovando artisticamente da oltre un secolo.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -355,3 +355,4 @@
 	</body>
 
 </html>
+
